<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:showIn="@layout/activity_main"
    tools:context=".activity.MainActivity">

    <at.markushi.ui.CircleButton
        android:id="@+id/record_button"
        android:layout_width="128dip"
        android:layout_height="128dip"
        app:cb_color="@color/buttonPending"
        android:src="@drawable/ic_play_arrow_white_48dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <at.markushi.ui.CircleButton
        android:id="@+id/pause_button"
        android:layout_width="128dip"
        android:layout_height="128dip"
        app:cb_color="@color/buttonPause"
        android:visibility="invisible"
        android:src="@drawable/ic_pause_white_48dp"
        android:layout_alignTop="@+id/record_button"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp" />

    <at.markushi.ui.CircleButton
        android:id="@+id/restart_button"
        android:layout_width="128dip"
        android:layout_height="128dip"
        app:cb_color="@color/buttonPending"
        android:visibility="invisible"
        android:src="@drawable/ic_play_arrow_white_48dp"
        android:layout_alignTop="@+id/record_button"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp" />


    <at.markushi.ui.CircleButton
        android:id="@+id/stop_button"
        android:layout_width="128dip"
        android:layout_height="128dip"
        app:cb_color="@color/buttonRecording"
        android:visibility="invisible"
        android:src="@drawable/ic_stop_white_48dp"
        android:layout_alignTop="@+id/record_button"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="27dp" />

    <at.markushi.ui.CircleButton
        android:id="@+id/mark_button"
        android:layout_width="128dip"
        android:layout_height="128dip"
        app:cb_color="@color/buttonMark"
        android:visibility="invisible"
        android:src="@drawable/ic_collections_bookmark_white_48dp"
        android:layout_alignTop="@+id/map_button"
        android:layout_alignStart="@+id/pause_button" />

    <at.markushi.ui.CircleButton
        android:id="@+id/map_button"
        android:layout_width="128dip"
        android:layout_height="128dip"
        android:layout_marginTop="27dp"
        android:src="@drawable/ic_map_white_48dp"
        android:visibility="invisible"
        app:cb_color="@color/buttonMap"
        android:layout_below="@+id/record_button"
        android:layout_alignStart="@+id/stop_button" />
</RelativeLayout>
