<resources>
    <string name="app_name">WalkLogger</string>
    <string name="map">Map</string>
    <string name="export">Export</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="walk_name">walk name</string>
    <string name="waypoint_memo">memo</string>

    <string name="nav_record">Record</string>
    <string name="nav_history">History</string>

    <string name="recording_finish_dialog_title">Set walk name</string>
    <string name="recording_finish_dialog_content">Default: saved time</string>
    <string name="recording_finish_positive">Save</string>
    <string name="recording_finish_negative">Not Save</string>
    <string name="recording_finish_neutral">Cancel</string>

    <string name="notification_content">Now Recording...</string>

    <string name="title_activity_walk_history">WalkHistory</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_settings">Settings</string>
    <string name="update_walk_dialog_title">Update walk name</string>
    <string name="delete_walk_dialog_title">Delete walk</string>
    <string name="export_walk_dialog_title">Export data to Google MyDrive</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="export_complete">File exported</string>

    <string name="mark_dialog_title">Write down where you are now</string>
    <string name="mark_dialog_content">Please input detail</string>
    <string name="mark_positive">Save</string>
    <string name="mark_neutral">Cancel</string>
    <string name="save_mark">Save memo</string>
</resources>
